# kodi-repo-bootstrap

./: .gitignore  README.md  config.json.example  generate_repo.py  pyproject.toml  repo_addon.xml.tpl
.github/workflows/: publish_pypi.yml
_tools/: generate_repo.py  template.xml
kodi_repo_bootstrap/: __main__.py  main.py
kodi_repo_bootstrap/addon/: addon.py  manager.py
kodi_repo_bootstrap/cli/: args.py
kodi_repo_bootstrap/fs/: dir.py  file.py
kodi_repo_bootstrap/repo/: config.py  manager.py  version.py
