[tool.poetry]
name = "kodi-repo-bootstrap"
version = "2.1.0"
description = "Bootstrap GIT repo for setting up a Kodi repository"
authors = ["mammo0 <marc.ammon@hotmail.de>"]
homepage = "https://github.com/mammo0/kodi-repo-bootstrap"
readme = "README.md"
license = "GPL-2.0-only"


packages = [
    { include = "kodi_repo_bootstrap" }
]

include = ["kodi_repo_bootstrap/res/repo_addon.xml.tpl"]


[tool.poetry.scripts]
kodi-repo-bootstrap = "kodi_repo_bootstrap.main:run"


[tool.poetry.dependencies]
python = "^3.13"
importlib-resources = "^6.4.5"


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
metadata = false

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
